<resources>

    <string name="app_name">MusicApplication_Nhóm 4</string>
    <string name="trangchu">Trang chủ</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="playlist">Playlist</string>
    <string name="canhan">Cá nhân</string>
    <string name="new_playlist">Tạo Playlist</string>
    <string name="playlist_label">Playlist</string>
    <string name="sign_up">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="account">Tài khoản</string>
    <string name="logout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>